# nootle

./: .gitignore  ACTION-PLAN.md  CHANGELOG.md  CLAUDE.md  FULL-AUDIT-REPORT.md  README.md  cliff.toml  index.html  package.json  pnpm-lock.yaml  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: changelog.yml  ci.yml  lint-commits.yml  publish.yml  release-please.yml  security.yml
Nootle.icon/: icon.json
docs/: RELEASE_SETUP.md
docs/plans/: 2026-02-24-nootle-implementation-plan.md  2026-02-24-nootle-meeting-recorder-design.md  2026-02-25-accent-color-picker-design.md  2026-02-25-accent-color-picker-plan.md  2026-02-25-deploy-release-readme-design.md  2026-02-25-deploy-release-readme-plan.md  2026-02-25-donation-landing-page-design.md  2026-02-25-help-docs-design.md  (+28 more)
scripts/: build-icons.py  ci-frontend.sh  ci-rust.sh
site/: .impeccable.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/: nootle-cli.md
src-tauri/src/: analytics.rs  audio.rs  chunking.rs  commands.rs  db.rs  denoise.rs  detection.rs  diarization.rs  embedding.rs  error.rs  extraction.rs  keychain.rs  lib.rs  linear.rs  llm.rs  main.rs  mcp.rs  model_download.rs  model_registry.rs  permissions.rs  summarization.rs  transcription.rs  vad.rs  workflows.rs
src-tauri/src/audio/: capture.rs  mic.rs  mixer.rs  mod.rs  session.rs  system_audio.rs  writer.rs
src-tauri/src/llm/: anthropic.rs  bedrock.rs  claude_agent.rs  codex.rs  codex_cli.rs  google.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  types.rs
src-tauri/tests/: db_test.rs  user_journey_test.rs
(+96 files in other folders)
