[package]
name = "nootle-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nootle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
sha2 = "0.10"
tokio-util = "0.7"
dirs = "6"
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
cidre = { version = "0.14", features = ["av"], optional = true }
ort = { version = "2.0.0-rc.11", features = ["coreml", "ndarray"] }
ndarray = "0.16"
block2 = "0.6"
objc2 = "0.6"
sysinfo = "0.32"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1.0"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
system-audio = ["cidre"]
